[project]
name = "llm-benchmark"
version = "0.1.0"
description = "LLM benchmarking tools for the LLM CLI"
readme = "README.md"
authors = [{name = "Anthony Shaw"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "aiohttp>=3.11.18",
    "llm>=0.26",
    "rich"
]

[project.urls]
Homepage = "https://github.com/tonybaloney/llm-benchmark"
Changelog = "https://github.com/tonybaloney/llm-benchmark/releases"
Issues = "https://github.com/tonybaloney/llm-benchmark/issues"
CI = "https://github.com/tonybaloney/llm-benchmark/actions"

[project.entry-points.llm]
benchmark = "llm_benchmark"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "pytest-asyncio", "ruff", "pyright"]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I"]
