[project]
name = "llm-profile"
version = "0.4.0"
description = "LLM benchmarking tools for the LLM CLI"
readme = "README.md"
authors = [{name = "Anthony Shaw"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "aiohttp>=3.11.18",
    "llm>=0.26",
    "rich"
]

[project.urls]
Homepage = "https://github.com/tonybaloney/llm-profile"
Changelog = "https://github.com/tonybaloney/llm-profile/releases"
Issues = "https://github.com/tonybaloney/llm-profile/issues"
CI = "https://github.com/tonybaloney/llm-profile/actions"

[project.entry-points.llm]
profile = "llm_profile"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "pytest-asyncio", "ruff", "pyright"]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I"]
